[gd_scene load_steps=2 format=2]

[ext_resource path="res://debug/debugPanel/debugPanel.gd" type="Script" id=1]

[node name="DebugPanel" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -59.0
margin_right = -8.0
margin_bottom = 59.0
alignment = 1

[node name="ShakeButton" type="Button" parent="VBoxContainer"]
margin_top = 13.0
margin_right = 104.0
margin_bottom = 33.0
text = "Shake"

[node name="BuyButton" type="Button" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 104.0
margin_bottom = 57.0
text = "Buy"

[node name="BuyHouseButton" type="Button" parent="VBoxContainer"]
margin_top = 61.0
margin_right = 104.0
margin_bottom = 81.0
text = "Buy House"

[node name="OmitButton" type="Button" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 104.0
margin_bottom = 105.0
text = "Omit"

[connection signal="pressed" from="VBoxContainer/ShakeButton" to="." method="_on_ShakeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BuyHouseButton" to="." method="_on_BuyHouseButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OmitButton" to="." method="_on_OmitButton_pressed"]
